force-app/main/default/objects/ColumnsChangeHistory__b/ColumnsChangeHistory__b.object-meta.xml
<CustomObject>
    <label>項目変更履歴</label>
</CustomObject>