force-app/main/default/objects/ColumnsChangeHistory__b/fields/ColumnName__c.field-meta.xml
<CustomField>
    <fullName>ColumnName__c</fullName>
    <label>項目名</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>