force-app/main/default/objects/ColumnsChangeHistory__b/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>変更前</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>