force-app/main/default/objects/ColumnsChangeHistory__b/fields/UpdatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDateTime__c</fullName>
    <label>更新日時</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>