force-app/main/default/objects/ColumnsChangeHistory__b/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ColumnsChangeHistories</relationshipName>
    <type>Lookup</type>
</CustomField>